fix modal layout issue

--- a/src/components/Header/Header.less
+++ b/src/components/Header/Header.less
@@ -25,6 +25,9 @@ header {
     right: 0;
     background-color: rgba(0, 0, 0);
     .modal {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       form {
         width: 350px;
       }
