--- a/src/components/Modal/Modal.less
+++ b/src/components/Modal/Modal.less
@@ -18,9 +18,6 @@
   padding: 10px;
   background: rgba(0, 0, 0, 0.7);
   border: 1px solid #545454;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   @media screen and (max-width: 800px) {
     align-items: baseline;
   }
